--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,13 @@
-version: '3.8'
+version: "3"
 services:
-  app:
-    build: .
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - .:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
     environment:
-      - DISCORD_TOKEN=${DISCORD_TOKEN}
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/myapp
-    depends_on:
-      - db
-
-  db:
-    image: postgres:14
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: myapp
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-volumes:
-  pgdata:
+      - NODE_ENV=development
