--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   "dependencies": {
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "pg": "^8.15.6"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.14",
     "@types/express": "^5.0.1",
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.15.9",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
