--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,12 @@
 # Usar imagen base de Node.js
-FROM node:22
+FROM node:20-slim
+
+# Instalar dependencias del sistema necesarias
+RUN apt-get update && apt-get install -y \
+    python3 \
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
 
 # Establecer directorio de trabajo
 WORKDIR /app
@@ -9,10 +16,14 @@ COPY package.json pnpm-lock.yaml ./
 
 # Instalar dependencias
 RUN npm install -g pnpm
-RUN pnpm install
+RUN pnpm install --frozen-lockfile
 
 # Copiar el código fuente al contenedor
 COPY . .
+
+# Configurar variables de entorno para Node.js
+ENV NODE_ENV=development
+ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 # Expone el puerto de la aplicación
 EXPOSE 3000
