--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "cors": "^2.8.5",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "rcon-client": "^4.2.5"
+    "inversify": "^7.5.1",
+    "rcon-client": "^4.2.5",
+    "reflect-metadata": "^0.2.2",
+    "routing-controllers": "^0.11.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.9",
+    "inversify-binding-decorators": "^4.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
