Corregida referencia al docker file de produccion

--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           context: .
           push: true
+          file: Dockerfile.prod
           tags: |
             ghcr.io/tu_usuario/nombre-app:latest
             ghcr.io/tu_usuario/nombre-app:${{ github.sha }}
