--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,24 +1,31 @@
-# Imagen base de Node.js
-FROM node:20-slim
+# Etapa 1: Build
+FROM node:20-slim AS builder
 
-# Establecer directorio de trabajo
 WORKDIR /app
 
-# Copiar solo los archivos relevantes para instalar dependencias
+# Copia package.json y pnpm-lock.yaml
 COPY package.json pnpm-lock.yaml ./
 
-# Instalar dependencias (sin dependencias de desarrollo)
-RUN npm install -g pnpm
-RUN pnpm install --frozen-lockfile --prod
+# Instala todas las dependencias (incluyendo dev)
+RUN npm install -g pnpm && pnpm install
 
-# Copiar el código fuente al contenedor
+# Copia el resto del código y compila
 COPY . .
+RUN pnpm build
 
-# Compilar TypeScript a JavaScript
-RUN pnpm run build
+# Etapa 2: Producción
+FROM node:20-slim AS production
 
-# Exponer el puerto de la aplicación
+WORKDIR /app
+
+# Copia solo los archivos necesarios de la build
+COPY package.json pnpm-lock.yaml ./
+RUN npm install -g pnpm && pnpm install --prod
+
+COPY --from=builder /app/dist ./dist
+
+# Variables de entorno y puertos
+ENV NODE_ENV=production
 EXPOSE 3000
 
-# Ejecutar la aplicación con Node.js
 CMD ["node", "dist/index.js"]
