--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   backend:
-    image: ghcr.io/matienzo/bot-discord:latest
+    image: ghcr.io/matienzo01/bot-discord:latest
     ports:
       - "3000:3000"
     environment:
