--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -7,6 +7,6 @@ services:
     environment:
       - NODE_ENV=production
     deploy:
-      replicas: 2
+      replicas: 1
       restart_policy:
-        condition: on-failure
+        condition: none
