Agregado el token de discord

--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -36,6 +36,11 @@ jobs:
             ghcr.io/matienzo01/bot-discord:latest
             ghcr.io/matienzo01/bot-discord:${{ github.sha }}
 
+      - name: Subir archivo .env al servidor remoto
+        run: |
+          echo "DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}" > .env
+          scp -o StrictHostKeyChecking=no -i <(echo "${{ secrets.REMOTE_SSH_KEY }}") .env ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:~/bot-discord.env
+
       - name: Desplegar en servidor remoto
         uses: cssnr/stack-deploy-action@v1
         with:
