--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -6,6 +6,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
     deploy:
       replicas: 1
       restart_policy:
