--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -2,7 +2,9 @@ version: "3.8"
 services:
   backend:
     image: ghcr.io/matienzo01/bot-discord:latest
-    ports:
+    env_file:
+      - ~/bot-discord.env
+      ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
