Agregado la var d entorno en el docker compose de prod

--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - NODE_ENV=production
       - DISCORD_TOKEN=${DISCORD_TOKEN}
+      - API_TOKEN=${API_TOKEN}
     deploy:
       replicas: 1
       restart_policy:
