--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "inversify": "^7.5.4",
+    "pg": "^8.13.1",
     "rcon-client": "^4.2.5",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.2"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.16.0",
+    "@types/pg": "^8.11.10",
     "inversify-binding-decorators": "^4.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
